2010-07-02  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (cygwin_getsockopt): Make sure SO_PEERCRED is only handled
	in level SOL_SOCKET.  Workaround a return value regression in Vista
	and later.  Add comment to explain.

2010-06-29  Corinna Vinschen  <corinna@vinschen.de>

	* spawn.cc (spawn_guts): Reinstantiate a FIXME comment.

2010-06-29  Corinna Vinschen  <corinna@vinschen.de>

	* exceptions.cc (dump_exception): Use %W instead of %s for printing
	progname.
	* fork.cc (frok::parent): Fix typos in debug output.
	* spawn.cc (spawn_guts): Copy wide Win32 filename into _pinfo::progname,
	rather than native NT name.  Use %W instead of %S for printing progname.

2010-06-28  Christopher Faylor  <me+cygwin@cgf.cx>

	* fork.cc (frok::parent): Improve error message.

2010-06-22  Corinna Vinschen  <corinna@vinschen.de>

	* flock.cc (allow_others_to_sync): Use small stack buffer rather
	than big temp buffer.  Fix typo in comment.
	(lf_setlock): Revert to using tmp_pathbuf.
	(lf_getlock): Ditto.

2010-06-22  Corinna Vinschen  <corinna@vinschen.de>

	* sec_acl.cc (setacl): Use the long time unused ACL_DEFAULT_SIZE
	instead of a constant value.
	* security.cc (alloc_sd): Ditto.

2010-06-21  Christopher Faylor  <me+cygwin@cgf.cx>

	* tmpbuf.h: New file.
	* flock.cc: Include tmpbuf.h for new tmpbuf functionality.
	(allow_others_to_sync): Use tmpbuf rather than tmp_pathbuf.  Explain
	why.
	(lf_setlock): For consistency, use tmpbuf rather than tmp_pathbuf.
	(lf_getlock): Ditto.

2010-06-21  Christopher Faylor  <me+cygwin@cgf.cx>

	* dcrt0.cc (__api_fatal): Temporarily generate a stackdump.

2010-06-21  Christopher Faylor  <me+cygwin@cgf.cx>

	* tls_pbuf.cc (tmp_pathbuf::w_get): Report what's failing when too many
	buffers are in use.

2010-06-17  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_base::fstat_by_handle): Fetch stat
	handle only after checking for NFS.

2010-06-15  Corinna Vinschen  <corinna@vinschen.de>
